--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,3 @@
-@ -1,330 +1,239 @@
-@ -1,313 +1,318 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -291,11 +289,12 @@
   .border.active-elevate:not(.no-active-interaction-elevate)::after,
   .border.hover-elevate-2:not(.no-hover-interaction-elevate)::after,
   .border.active-elevate-2:not(.no-active-interaction-elevate)::after,
-  .border.hover-elevate:not(.no-hover-interaction-elevate)::after {
+  .border.hover-elevate:not(.no-hover-interaction-elevate)::after,
   .border.active-elevate-2:not(.no-active-interaction-elevate)::after {
     inset: -1px;
-  }
 }
+  }
+
 
 /* Mobile Controls */
 #joystick-zone {
